Totally reorganize project structure
Love it. Inspired by
https://gist.github.com/ryanflorence/110d4538bf98694538de

ESLint does not yet support glob-based rules, but likely will in v2:
https://github.com/eslint/eslint/issues/3611

--- a/views/App/App.scss
+++ b/views/App/App.scss
@@ -1,1 +1,7 @@
 @import '~normalize.css/normalize.css'; // Tilde resolves node modules
+
+@import '../common/variables';
+
+body {
+  background: $main-bkgd;
+}
